# soulkiller

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-21-soulkiller-memory-backup.md
docs/superpowers/specs/: 2026-05-21-soulkiller-memory-backup-design.md
src/soulkiller/: cli.py  config.py  git_ops.py  restore.py  scanner.py  scheduler.py  sync.py  timer.py
tests/: test_cli.py  test_config.py  test_git_ops.py  test_scanner.py  test_scheduler.py  test_sync.py  test_timer_restore.py  test_wrapper.py
workspace/: ERROR_BOOK.md  project_rule.txt
workspace/interns/intern_mrturtle_test5/: knowledge.md  status.md
