[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "soulkiller"
version = "0.1.0"
description = "Back up long-term Codex and Claude coding-agent memory."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
soulkiller = "soulkiller.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
